test/domains/compilerErrors/notsupportedIndexOrder-assoc.chpl
use notsupportedCommon;

writeln(dfltAssociativeBase.indexOrder(0));
