test/domains/compilerErrors/notsupportedIndexOrder-assoc.good
notsupportedIndexOrder-assoc.chpl:3: error: this domain type does not support 'indexOrder'
